--- a/Frontend/src/assets/main.css
+++ b/Frontend/src/assets/main.css
@@ -1,12 +1,25 @@
 @import './base.css';
-header{
-  grid-column: span 3;
-}
-main {
-  display: grid;
-  grid-template-rows: 35px 1fr;
-  grid-template-columns: 250px 230px 1fr;
-  height: 100vh;
+
+body {
+  direction: ltr;
+  line-height: 1.5;
+  font-size: 14px;
+   font-family:
+    Inter,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+  text-rendering: optimizeLegibility;
+  overflow: hidden;
+  height: 100%;
 }
 aside {
   grid-column: 1;
@@ -27,3 +40,4 @@ aside {
   grid-row-start: 2;
   grid-column: 2 / span 4;
 }
+
