css: fix table header

--- a/Frontend/src/assets/custom.scss
+++ b/Frontend/src/assets/custom.scss
@@ -104,7 +104,7 @@ tbody tr:last-child td:last-child {
 .tuni-table-wrapper th {
   background-color: var(--bs-secondary-bg-subtle);
   position: sticky;
-  top: calc(var(--header-height) + 56px);
+  top: calc(var(--header-height) + var(--actions-wrapper-height));
   z-index: 9;
 }
 
