--- a/Frontend/src/assets/base.css
+++ b/Frontend/src/assets/base.css
@@ -16,7 +16,8 @@
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
-  --header-height: 70px
+  --header-height: 70px;
+  --actions-wrapper-height: 150px;
 }
 
 /* semantic color variables for this project */
